--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -8,7 +8,6 @@
 .hero__slide {
   height: auto;
   padding: 409px 0 60px 0;
-  // overflow: hidden;
   min-height: 55.56vw;
   display: flex;
   flex-direction: column;
@@ -79,11 +78,6 @@
   align-items: flex-start;
   border-radius: 20px 20px 0 0;
   background-color: $color-default-white;
-
-  /* width: 100%;
-  min-width: 320px;
-  max-width: 1240px; */
-  // margin: 0 auto;
   padding: 14px 20px 15px 20px;
 
   &::before {
@@ -265,17 +259,13 @@
 }
 
 .hero__info p {
-  // width: 57.77%;
   margin: 0;
 
   @include vp-1199 {
-    // width: 48.22%;
-
     line-height: 20px;
   }
 
   @include vp-767 {
-    // width: 100%;
     font-size: 14px;
     padding: 0 14px 10px 14px;
     background-color: $color-default-white;
@@ -325,6 +315,7 @@
   min-width: 196px;
   margin-top: 12px;
   letter-spacing: 0.24px;
+  background-color: $color-default-white;
 
   @include vp-1199 {
     margin-top: 4px;
