--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -22,7 +22,6 @@
 
 .main-header__wrapper {
   display: flex;
-  // flex-wrap: wrap;
   justify-content: space-between;
   align-items: start;
   position: relative;
@@ -32,11 +31,6 @@
   margin-right: 20px;
   transition: all $trans-default;
   display: inline-flex;
-  transform: scale(1);
-  /*display: flex;
-  align-items: center;
-  justify-content: center;*/
-  //position: relative;
 
   &:hover,
   &:focus {
@@ -63,7 +57,6 @@
 
     @include vp-767 {
       margin: 0;
-      //transform: scale(0);
     }
   }
 }
@@ -187,17 +180,20 @@
 
     @include vp-767 {
       width: 100%;
-      /*display: flex;
-      justify-content: space-between;
-      gap: 20px;*/
-      gap: 76.69%;
+      grid-template-columns: 1fr 46px;
+      transition: width 3s;
     }
   }
 }
 
-.main-header__button span {
+.main-header__button span:first-child {
   display: block;
   margin-top: 16px;
+  transition: all $trans-default;
+
+  @include vp-767 {
+    justify-self: start;
+  }
 }
 
 .main-header__burger {
@@ -205,15 +201,12 @@
   height: 46px;
   background-color: $color-cerulean-blue;
   border-radius: 50%;
+  display: block;
 
   position: relative;
 
   padding: 5px;
   transition: all $trans-default;
-
-  // cursor: pointer;
-
-  // user-select: none;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -229,8 +222,6 @@
 
   transition: all $trans-default;
 
-  // user-select: none;
-
   color: $color-default-white;
 
   .is-open & {
@@ -242,8 +233,6 @@
   display: none;
 
   transition: all $trans-default;
-
-  // user-select: none;
 
   color: $color-cerulean-blue;
 
