--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -46,7 +46,7 @@
 
   color: rgba($color-cerulean-blue, 0.6);
 
-  background-color: $color-transparent;
+  background-color: $color-alabaster;
   border: none;
   cursor: pointer;
 
@@ -156,8 +156,6 @@
   border-radius: 12px;
   transition: opacity $trans-default;
 
-  // color: $color-default-white;
-
   background-color: $color-echo-blue;
 
   @include vp-1199 {
@@ -190,10 +188,6 @@
   }
 }
 
-/* .news__slide:first-child {
-  width: calc(46% + 34px);
-} */
-
 .news__image-wrapper {
   position: absolute;
   top: 0;
@@ -203,11 +197,6 @@
   width: 100%;
   height: 100%;
   border-radius: 12px;
-
-  /*@include vp-767 {
-    width: 100%;
-    min-height: 128.75vw;
-  }*/
 }
 
 .news__image-wrapper img {
@@ -363,11 +352,6 @@
   }
 }
 
-/* .news__slide:first-child h3 {
-  width: 52.3%;
-  padding: 13px 10px 4px 1px;
-} */
-
 .news__info {
   background-color: $color-alabaster;
   padding: 9px 19px 14px 1px;
@@ -375,7 +359,6 @@
   grid-template-columns: 1fr 30px;
   gap: 16px;
   border-radius: 0 12px 0 0;
-  // margin-top: -1px;
   min-height: 57px;
   align-items: center;
   position: relative;
