--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,6 +21,7 @@ $color-grey-nickel:                 #b7b5af;
 $color-hawkes-blue:                 #d6e2f3;
 $color-bleach-white:                #ebdeca;
 $color-wild-watermelon:             #ff5e66;
+$color-columbia-blue:               #a2dffd;
 
 
 // Gradient
