--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -2,6 +2,7 @@
   display: inline-flex;
   padding: 4px 4px 4px 30px;
   text-transform: uppercase;
+  align-items: center;
 
   font-size: 14px;
   font-weight: 500;
@@ -22,7 +23,7 @@
 
   span:first-child {
     display: block;
-    margin: 16px 30px 0 0;
+    margin-right: 30px;
   }
 
   span:last-child {
@@ -139,7 +140,7 @@
     line-height: 12px;
 
     span:first-child {
-      margin: 12px 20px 0 0;
+      margin-right: 20px;
     }
 
     span:last-child {
