--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -111,10 +111,13 @@
 
   @include vp-1199 {
     margin-top: 7px;
+    width: 55.7%;
+    justify-content: space-between;
   }
 
   @include vp-767 {
     margin: 0;
+    width: 77.6%;
   }
 }
 
