--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -202,7 +202,7 @@
   max-width: 126px;
 }
 
-.feedback__program-info h4 {
+.feedback__program-info p {
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
