--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -163,7 +163,7 @@
   flex-direction: column;
   justify-content: flex-end;
   width: 23%;
-  min-height: 27.8vw;
+  min-height: 400px;
   height: auto;
   padding: 124px 46px 0 0;
   border-radius: 12px;
@@ -556,6 +556,17 @@
   &:active {
     color: $color-default-white;
     background-color: $color-endeavour;
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:disabled {
+    background-color: $color-transparent;
+
+    pointer-events: none;
+    color: $color-mischka;
   }
 
   @include vp-767 {
