Вносит правки после тестирования

--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -125,8 +125,8 @@
       color: $color-default-white;
 
       &:hover {
-        background-color: $color-transparent;
-        color: $color-cerulean-blue;
+        background-color: $color-cerulean-blue;
+        color: $color-default-white;
       }
 
       &:focus-visible {
