--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -134,6 +134,14 @@
     }
   }
 
+  @include vp-1199 {
+    span:first-child {
+      flex-grow: 1;
+      text-align: center;
+    }
+
+  }
+
   @include vp-767 {
     padding: 4px 4px 4px 20px;
     font-size: 12px;
