--- a/source/sass/blocks/custom-toggle.scss
+++ b/source/sass/blocks/custom-toggle.scss
@@ -30,28 +30,22 @@
   label {
     position: relative;
 
-    padding: 5px 0 0 30px;
-
     cursor: pointer;
+    display: flex;
+    align-items: center;
 
     span {
-      margin-bottom: 0;
-      margin-left: 0;
-
       @include vp-767 {
         line-height: 14px;
       }
     }
 
-    @include vp-767 {
-      padding: 0 0 0 30px;
-    }
   }
 
   .custom-toggle__icon-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin-right: 10px;
+    align-self: start;
 
     width: 20px;
     height: 20px;
@@ -64,9 +58,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 
     @include vp-767 {
-      top: 3px;
+      margin: 3px 10px 0 0;
     }
   }
 
@@ -137,10 +132,6 @@
 
   .custom-toggle__icon-wrapper {
     border: 1px solid rgba($color-charcoal, 0.3);
-
-    @include vp-767 {
-      top: 3px;
-    }
 
     .custom-toggle__icon {
       stroke: $color-default-white;
