--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -40,7 +40,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 16px;
-  margin-bottom: 43px;
+  margin-bottom: 40px;
 
   @include vp-767 {
     gap: 21px;
@@ -138,7 +138,11 @@
   }
 
   textarea {
-    min-height: 98px;
+    min-height: 100px;
+
+    @include vp-1199 {
+      min-height: 98px;
+    }
 
     @include vp-767 {
       min-height: 94px;
