--- a/css/style.css
+++ b/css/style.css
@@ -5422,7 +5422,7 @@ button,
 }
 
 .main-header__nav-wrapper {
-  overflow: auto;
+  overflow-y: auto;
   background-color: #316dc2;
   border-radius: 16px;
   max-height: 0;
@@ -5447,7 +5447,6 @@ button,
   margin: 0;
   list-style-type: none;
   padding: 0;
-  overflow: scroll;
   color: rgba(255, 255, 255, 0.7);
   display: -ms-grid;
   display: grid;
